Sourcing loading screen with proper font

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SourcingClient</title>
+  <title>Sourcing Client</title>
   <base href="/">
+  <style type="text/css">
+    app-root:empty::after {
+      content: 'Sourcing…';
+      width: 100px;
+      height: 100px;
+      position: absolute;
+      display: block;
+      top: 50%;
+      left: 50%;
+      font-size: 20px;
+      transform: translate(-50%, -50%);
+    }
+  </style>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root>Sourcing...</app-root>
+<body class="mat-typography">
+  <app-root></app-root>
 </body>
 </html>
