--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
+  <noscript>
+  <h3 style="color: #673ab7; font-family: Roboto; margin: 2rem;">
+      Sorry, but app is not available without javascript
+  </h3>
+</noscript>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
